DIG-5526 fixed layout shift

--- a/src/core/atoms/image/image.scss
+++ b/src/core/atoms/image/image.scss
@@ -135,3 +135,8 @@
     max-width: 10rem;
   }
 }
+
+// using for prevent layout shifts
+.imgPlaceholderWrapper {
+  min-height: 228px;
+}
